# vutils-optparse

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  deploy.yml
src/vutils/optparse/: __init__.py  __init__.pyi  version.py
tests/unit/: __init__.py  test_version.py
